# second_space_mining

./: CMakeLists.txt  README.md  run.sh
src/: constants.hpp  ecs.hpp  main.cpp  test.cpp  testing_ecs.cpp
src/ecs_hell/: ECS.hpp  component_array.hpp  component_manager.hpp  constants_using.hpp  entity_manager.hpp  global_manager.hpp  global_state.hpp  system_manager.hpp  template_stuff.hpp  world.hpp
src/objects/: components.cpp  components.hpp  systems.cpp  systems.hpp
src/template_madness/: another_template.cpp  template_hell.cpp
src/template_madness/testing/: demo.hpp  global_test.hpp
src/testing/: demo.cpp  global_test.cpp
